# tollara-sdk

./: .gitignore  CHANGELOG.md  PACKAGE_NAME.md  README.md
.cursor/plans/: fix_n8n_integration_34b73a24.plan.md  fix_n8n_integration_6caf8cdf.plan.md  port_java_sdk_parity_edc8cc42.plan.md  rebrand_to_agentvend_4391a355.plan.md  rebrand_to_tollara_f38d7ed8.plan.md  sdk_monorepo_and_multi-language_sdks_d41e55d9.plan.md
.cursor/rules/: coding-preference.mdc  coding-workflow-preferences.mdc  project-guidlines.mdc  project-overview.mdc  sdk-coding-rules.mdc  terminal-console-operations.mdc
.github/workflows/: ci.yml  publish.yml
client/java/: README.md  build.gradle  settings.gradle
client/shell/: README.md  invoke-test-agent.ps1
docs/: api-overview.md  appstore-data-quality-report.md  hmac-spec.md  main_website_sdk_and_integrations_docs_aba198ed.plan.md  maven-central-java-sdk-publishing.md  platform-tollara-rebrand-checklist.md  sdk-api-spec.md  sdk-callers-and-backends.md  sdk-http-api-dependencies.md  sdk-monorepo-session-context-and-work-log.md  sdk-repo-implementation-prompt.md  sdk-repo-project-context.md  tollara-registry-prep.md
docs-sdk/: MAIN-SDK-API-SPEC.md  rename_agent_service_entities_1546cd46.plan.md
docs-sdk/fixtures/: README.md  (+3 more)
documentation/: sdk-repo-project-context.md
integration-n8n/: .gitignore  CHANGELOG.md  LICENSE  LOCAL-DEVELOPMENT.md  README.md  deploy-local.ps1  deploy-npm.ps1  index.js  n8n-nodes-tollara-0.0.3.tgz  package-lock.json  package.json  tsconfig.json
integration-openclaw/: README.md  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
sdk-dotnet/: AgentVend.AgentSdk.csproj  AgentVend.ServiceSdk.csproj  AgentVendClient.cs  AgentVendHeaders.cs  CompletionStatus.cs  GatewayClient.cs  GatewayInvokeClient.cs  Hmac.cs  Marketplace.AgentSdk.csproj  PathPrefixes.cs  README.md  Tollara.ServiceSdk.csproj  TollaraClient.cs  TollaraHeaders.cs  UsageBreakdown.cs  UsageClient.cs  ValidationClient.cs  Verifier.cs
sdk-go/: README.md  client.go  client_test.go  env.go  go.mod  headers.go  hmac.go  hmac_test.go  path_prefixes.go  path_prefixes_test.go  validation_client.go  validation_client_test.go
sdk-java/: README.md  build.gradle  gradlew  settings.gradle
sdk-js/: README.md  jest.config.js  package-lock.json  package.json
sdk-php/: README.md  composer.json
sdk-python/: LICENSE  README.md  pyproject.toml
sdk-python/src/agentvend_agent_sdk/: __init__.py  agentvend_headers.py  client.py  usage_client.py  validation_client.py  verifier.py
sdk-python/src/agentvend_agent_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sdk-python/src/agentvend_sdk/: __init__.py  agentvend_headers.py  billing_client.py  client.py  gateway_client.py  gateway_invoke.py  hmac_utils.py  usage_client.py  validation_client.py  verifier.py
sdk-python/src/agentvend_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk-python/src/agentvend_service_sdk/: __init__.py  billing_client.py  client.py  gateway_invoke.py  usage_client.py  validation_client.py  verifier.py
sdk-python/src/marketplace_agent_sdk/: __init__.py  usage_client.py  validation_client.py  verifier.py
sdk-python/src/marketplace_agent_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sdk-python/src/tollara_service_sdk/: __init__.py  billing_client.py  client.py  completion_status.py  gateway_client.py  gateway_invoke.py  path_prefixes.py  tollara_headers.py  usage_breakdown.py  usage_client.py  validation_client.py  verifier.py
sdk-python/tests/: __init__.py  test_agent_vend_client.py  test_gateway_client.py  test_gateway_hmac_user_context.py  test_path_prefixes.py  test_tollara_client.py  test_usage_client_integration.py  test_validation_client_integration.py  test_verifier.py
sdk-ruby/: README.md  agentvend_agent_sdk.gemspec  agentvend_sdk.gemspec  marketplace_agent_sdk.gemspec  tollara_sdk.gemspec
sdk-rust/: Cargo.toml  README.md
sdk-rust/src/: agent_vend_client.rs  gateway_client.rs  headers.rs  hmac.rs  lib.rs  path_prefixes.rs  tollara_client.rs  usage_client.rs  validation_client.rs
sdk-rust/tests/: integration.rs
sdk-typescript/: README.md  package.json  tsconfig.json
(+339 files in other folders)
