[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agentvend-agent-sdk"
version = "1.0.0"
description = "AgentVend SDK - verify HMAC, validate keys, report usage, progress, completion"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
http = ["requests"]
dev = ["pytest>=7.0", "requests", "responses>=0.24", "build"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
