[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "tollara-service-sdk"
version = "3.0.0"
description = "Tollara SDK - verify HMAC, validate keys, report usage, progress, completion"
authors = [{ name = "Tollara", email = "support@tollara.ai" }]
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://www.tollara.ai"
Documentation = "https://tollara.ai/docs"

[project.optional-dependencies]
http = ["requests"]
dev = ["pytest>=7.0", "requests", "responses>=0.24", "build"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
