[package]
name = "tollara-service-sdk"
version = "2.0.0"
edition = "2021"
description = "Tollara SDK - verify HMAC, validate keys, report usage"

[dependencies]
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subtle = "2.5"
chrono = { version = "0.4", features = ["clock"] }
reqwest = { version = "0.11", optional = true, features = ["json"] }
tokio = { version = "1", optional = true, features = ["rt-multi-thread", "macros"] }

[features]
default = []
http = ["reqwest", "tokio"]

[dev-dependencies]
mockito = "1.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["json"] }
